--- a/index.html
+++ b/index.html
@@ -22,66 +22,74 @@
             list-style-type: none;
             padding: 0;
         }
+        img {
+            max-width: 150px;
+            border-radius: 50%;
+            margin-bottom: 20px;
+        }
     </style>
 </head>
 <body>
 
-    <h1>Aly Elsherif</h1>
-    <p>Mathematics Consultant</p>
+    <h1>👨‍🏫 Aly Elsherif</h1>
+    <p>📐 Mathematics Consultant</p>
+
+    <!-- Add your photo here -->
+    <img src="profile.jpg" alt="Aly Elsherif">
 
     <div class="section contact-info">
-        <p><strong>Location:</strong> Mourad Street, Tanta, Egypt</p>
-        <p><strong>Phone:</strong> +201554712475</p>
-        <p><strong>Email:</strong> <a href="mailto:Aly_elshrief@yahoo.com">Aly_elshrief@yahoo.com</a></p>
+        <p>📍 <strong>Location:</strong> Mourad Street, Tanta, Egypt</p>
+        <p>📞 <strong>Phone:</strong> +201554712475</p>
+        <p>📧 <strong>Email:</strong> <a href="mailto:Aly_elshrief@yahoo.com">Aly_elshrief@yahoo.com</a></p>
     </div>
 
     <div class="section">
-        <h2>Skills</h2>
+        <h2>💼 Skills</h2>
         <ul>
-            <li>Leadership</li>
-            <li>Learning Strategies</li>
-            <li>Smart Board</li>
-            <li>Research</li>
-            <li>Metacognition</li>
-            <li>Management</li>
-            <li>Educational Administration</li>
-            <li>Classroom Management</li>
-            <li>Team Building</li>
-            <li>Critical Thinking</li>
-            <li>Self-Regulation</li>
-            <li>Teaching</li>
+            <li>🗣️ Leadership</li>
+            <li>📚 Learning Strategies</li>
+            <li>🖥️ Smart Board</li>
+            <li>🔬 Research</li>
+            <li>🧠 Metacognition</li>
+            <li>📊 Management</li>
+            <li>🏫 Educational Administration</li>
+            <li>📋 Classroom Management</li>
+            <li>🤝 Team Building</li>
+            <li>🤔 Critical Thinking</li>
+            <li>🎯 Self-Regulation</li>
+            <li>👨‍🏫 Teaching</li>
         </ul>
     </div>
 
     <div class="section">
-        <h2>Languages</h2>
-        <p>Arabic, English</p>
+        <h2>🌍 Languages</h2>
+        <p>🇦🇪 Arabic, 🇬🇧 English</p>
     </div>
 
     <div class="section">
-        <h2>Employment History</h2>
-        <p>Mathematics Consultant, WEST TANTA EDUCATIONAL ADMINISTRATION, Tanta, Egypt — August 2022 – Present</p>
-        <p>Manager, GYATH ELDEEN ENGLISH SCHOOL, Tanta, Egypt — October 2018 – August 2022</p>
-        <p>Manager, ELEMAM ELSHAFIE ENGLISH SCHOOL, Tanta, Egypt — August 2015 – October 2018</p>
-        <p>Maths Teacher, Ali Bin Abitalib Independent School, Doha — September 2013 – August 2015</p>
-        <p>Maths Teacher, ELSDEEK Independent, Doha, Qatar — January 2011 – August 2013</p>
-        <p>Mathematics Consultant, INTEGRATED LANGUAGE SCHOOL, Tanta, Egypt — January 2008 – September 2011</p>
+        <h2>📅 Employment History</h2>
+        <p>📌 Mathematics Consultant, WEST TANTA EDUCATIONAL ADMINISTRATION, Tanta, Egypt — August 2022 – Present</p>
+        <p>📌 Manager, GYATH ELDEEN ENGLISH SCHOOL, Tanta, Egypt — October 2018 – August 2022</p>
+        <p>📌 Manager, ELEMAM ELSHAFIE ENGLISH SCHOOL, Tanta, Egypt — August 2015 – October 2018</p>
+        <p>📌 Maths Teacher, Ali Bin Abitalib Independent School, Doha — September 2013 – August 2015</p>
+        <p>📌 Maths Teacher, ELSDEEK Independent, Doha, Qatar — January 2011 – August 2013</p>
+        <p>📌 Mathematics Consultant, INTEGRATED LANGUAGE SCHOOL, Tanta, Egypt — January 2008 – September 2011</p>
     </div>
 
     <div class="section">
-        <h2>Education</h2>
-        <p>Bachelor of Mathematics, Tanta University, Egypt — September 1992 – May 1996</p>
-        <p>Diploma in Teaching Mathematics, Tanta University, Egypt — September 1997 – May 1998</p>
+        <h2>🎓 Education</h2>
+        <p>🎓 Bachelor of Mathematics, Tanta University, Egypt — September 1992 – May 1996</p>
+        <p>🎓 Diploma in Teaching Mathematics, Tanta University, Egypt — September 1997 – May 1998</p>
     </div>
 
     <div class="section">
-        <h2>Courses</h2>
+        <h2>📜 Courses</h2>
         <ul>
-            <li>STEM in Education from Qrta</li>
-            <li>Children Rights from UN</li>
-            <li>The Seven Habits of Highly Effective People (Educator's Edition) from Franklin Covey</li>
-            <li>Professional Educational Behaviors from Education First</li>
-            <li>Effective Learning Strategies from Abubaker</li>
+            <li>📘 STEM in Education from QRTA</li>
+            <li>📘 Children's Rights from UN</li>
+            <li>📘 The Seven Habits of Highly Effective People (Educator's Edition) from Franklin Covey</li>
+            <li>📘 Professional Educational Behaviors from Education First</li>
+            <li>📘 Effective Learning Strategies from Abubaker</li>
         </ul>
     </div>
 
