--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
     <p>📐 Mathematics Consultant</p>
 
     <!-- Add your photo here -->
-    <img src="profile.jpg" alt="Aly Elsherif">
+<img src="https://raw.githubusercontent.com/mr-aly1/aly-elshiref.github.io/main/profile.jpg" alt="Aly Elsherif">
 
     <div class="section contact-info">
         <p>📍 <strong>Location:</strong> Mourad Street, Tanta, Egypt</p>
