--- a/index.html
+++ b/index.html
@@ -8,6 +8,26 @@
         body {
             font-family: Arial, sans-serif;
             margin: 40px;
+            line-height: 1.6;
+            color: #333;
+        }
+        .container {
+            display: flex;
+            justify-content: space-between;
+            align-items: flex-start;
+        }
+        .profile {
+            max-width: 250px;
+            margin-right: 40px;
+            text-align: center;
+        }
+        .profile img {
+            max-width: 100%;
+            border-radius: 50%;
+            margin-bottom: 20px;
+        }
+        .info {
+            max-width: 600px;
         }
         h1, h2 {
             color: #2E86C1;
@@ -15,82 +35,91 @@
         .section {
             margin-bottom: 20px;
         }
-        .contact-info {
-            font-size: 16px;
+        .contact-info p, .info ul, .info p {
+            margin: 5px 0;
         }
         ul {
             list-style-type: none;
             padding: 0;
         }
-        img {
-            max-width: 150px;
-            border-radius: 50%;
-            margin-bottom: 20px;
+        .skills-list li::before {
+            content: "✔️";
+            margin-right: 10px;
         }
     </style>
 </head>
 <body>
 
-    <h1>👨‍🏫 Aly Elsherif</h1>
-    <p>📐 Mathematics Consultant</p>
+    <div class="container">
+        <!-- Profile Picture and Name Section -->
+        <div class="profile">
+            <img src="https://raw.githubusercontent.com/mr-aly1/aly-elshiref.github.io/main/profile.jpg" alt="Aly Elsherif">
+            <h1>👨‍🏫 Aly Elsherif</h1>
+            <p>📐 Mathematics Consultant</p>
+        </div>
 
-    <!-- Add your photo here -->
-<img src="https://raw.githubusercontent.com/mr-aly1/aly-elshiref.github.io/main/profile.jpg" alt="Aly Elsherif">
+        <!-- Contact Information and Details -->
+        <div class="info">
+            <div class="section contact-info">
+                <p>📍 <strong>Location:</strong> Mourad Street, Tanta, Egypt</p>
+                <p>📞 <strong>Phone:</strong> +201554712475</p>
+                <p>📧 <strong>Email:</strong> <a href="mailto:Aly_elshrief@yahoo.com">Aly_elshrief@yahoo.com</a></p>
+            </div>
 
-    <div class="section contact-info">
-        <p>📍 <strong>Location:</strong> Mourad Street, Tanta, Egypt</p>
-        <p>📞 <strong>Phone:</strong> +201554712475</p>
-        <p>📧 <strong>Email:</strong> <a href="mailto:Aly_elshrief@yahoo.com">Aly_elshrief@yahoo.com</a></p>
-    </div>
+            <div class="section">
+                <h2>💼 Professional Summary</h2>
+                <p>
+                    As a highly experienced Mathematics Consultant and Teacher with over 26 years in the field, I bring a wealth of expertise to mathematics education. I specialize in classroom teaching, teacher development, and curriculum design. I have worked with diverse student populations, teachers, and administrators, driving academic progress and supporting professional development. My experience includes leading workshops, developing curricula, and integrating the latest trends in mathematics education.
+                </p>
+            </div>
 
-    <div class="section">
-        <h2>💼 Skills</h2>
-        <ul>
-            <li>🗣️ Leadership</li>
-            <li>📚 Learning Strategies</li>
-            <li>🖥️ Smart Board</li>
-            <li>🔬 Research</li>
-            <li>🧠 Metacognition</li>
-            <li>📊 Management</li>
-            <li>🏫 Educational Administration</li>
-            <li>📋 Classroom Management</li>
-            <li>🤝 Team Building</li>
-            <li>🤔 Critical Thinking</li>
-            <li>🎯 Self-Regulation</li>
-            <li>👨‍🏫 Teaching</li>
-        </ul>
-    </div>
+            <div class="section">
+                <h2>💼 Key Skills</h2>
+                <ul class="skills-list">
+                    <li>Leadership & Team Building</li>
+                    <li>Learning Strategies</li>
+                    <li>Smart Board Expertise</li>
+                    <li>Curriculum Development</li>
+                    <li>Classroom Management</li>
+                    <li>Critical Thinking & Problem Solving</li>
+                    <li>Educational Administration</li>
+                    <li>Professional Development for Teachers</li>
+                    <li>Student Assessment and Progress Monitoring</li>
+                </ul>
+            </div>
 
-    <div class="section">
-        <h2>🌍 Languages</h2>
-        <p>🇦🇪 Arabic, 🇬🇧 English</p>
-    </div>
+            <div class="section">
+                <h2>🌍 Languages</h2>
+                <p>🇦🇪 Arabic, 🇬🇧 English</p>
+            </div>
 
-    <div class="section">
-        <h2>📅 Employment History</h2>
-        <p>📌 Mathematics Consultant, WEST TANTA EDUCATIONAL ADMINISTRATION, Tanta, Egypt — August 2022 – Present</p>
-        <p>📌 Manager, GYATH ELDEEN ENGLISH SCHOOL, Tanta, Egypt — October 2018 – August 2022</p>
-        <p>📌 Manager, ELEMAM ELSHAFIE ENGLISH SCHOOL, Tanta, Egypt — August 2015 – October 2018</p>
-        <p>📌 Maths Teacher, Ali Bin Abitalib Independent School, Doha — September 2013 – August 2015</p>
-        <p>📌 Maths Teacher, ELSDEEK Independent, Doha, Qatar — January 2011 – August 2013</p>
-        <p>📌 Mathematics Consultant, INTEGRATED LANGUAGE SCHOOL, Tanta, Egypt — January 2008 – September 2011</p>
-    </div>
+            <div class="section">
+                <h2>📅 Employment History</h2>
+                <p>📌 <strong>Mathematics Consultant, WEST TANTA EDUCATIONAL ADMINISTRATION</strong>, Tanta, Egypt — August 2022 – Present</p>
+                <p>📌 <strong>Manager, GYATH ELDEEN ENGLISH SCHOOL</strong>, Tanta, Egypt — October 2018 – August 2022</p>
+                <p>📌 <strong>Manager, ELEMAM ELSHAFIE ENGLISH SCHOOL</strong>, Tanta, Egypt — August 2015 – October 2018</p>
+                <p>📌 <strong>Maths Teacher, Ali Bin Abitalib Independent School</strong>, Doha — September 2013 – August 2015</p>
+                <p>📌 <strong>Maths Teacher, ELSDEEK Independent</strong>, Doha, Qatar — January 2011 – August 2013</p>
+                <p>📌 <strong>Mathematics Consultant, INTEGRATED LANGUAGE SCHOOL</strong>, Tanta, Egypt — January 2008 – September 2011</p>
+            </div>
 
-    <div class="section">
-        <h2>🎓 Education</h2>
-        <p>🎓 Bachelor of Mathematics, Tanta University, Egypt — September 1992 – May 1996</p>
-        <p>🎓 Diploma in Teaching Mathematics, Tanta University, Egypt — September 1997 – May 1998</p>
-    </div>
+            <div class="section">
+                <h2>🎓 Education</h2>
+                <p>🎓 Bachelor of Mathematics, Tanta University, Egypt — September 1992 – May 1996</p>
+                <p>🎓 Diploma in Teaching Mathematics, Tanta University, Egypt — September 1997 – May 1998</p>
+            </div>
 
-    <div class="section">
-        <h2>📜 Courses</h2>
-        <ul>
-            <li>📘 STEM in Education from QRTA</li>
-            <li>📘 Children's Rights from UN</li>
-            <li>📘 The Seven Habits of Highly Effective People (Educator's Edition) from Franklin Covey</li>
-            <li>📘 Professional Educational Behaviors from Education First</li>
-            <li>📘 Effective Learning Strategies from Abubaker</li>
-        </ul>
+            <div class="section">
+                <h2>📜 Professional Development & Courses</h2>
+                <ul>
+                    <li>📘 STEM in Education from QRTA</li>
+                    <li>📘 Children’s Rights from the UN</li>
+                    <li>📘 The Seven Habits of Highly Effective People (Educator's Edition) from Franklin Covey</li>
+                    <li>📘 Professional Educational Behaviors from Education First</li>
+                    <li>📘 Effective Learning Strategies from Abubaker</li>
+                </ul>
+            </div>
+        </div>
     </div>
 
 </body>
