--- a/index.html
+++ b/index.html
@@ -69,10 +69,11 @@
             <div class="section">
                 <h2>💼 Professional Summary</h2>
                 <p>
-                    As a highly experienced Mathematics Consultant and Teacher with over 26 years in the field, I bring a wealth of expertise to mathematics education. I specialize in classroom teaching, teacher development, and curriculum design. I have worked with diverse student populations, teachers, and administrators, driving academic progress and supporting professional development. My experience includes leading workshops, developing curricula, and integrating the latest trends in mathematics education.
+                    Highly experienced Mathematics Consultant with 26 years of expertise in educational leadership, classroom management, and curriculum development. Skilled at fostering professional development, enhancing learning strategies, and improving student outcomes.
                 </p>
             </div>
 
+            <!-- Skills Section (First to grab attention) -->
             <div class="section">
                 <h2>💼 Key Skills</h2>
                 <ul class="skills-list">
@@ -88,21 +89,32 @@
                 </ul>
             </div>
 
-            <div class="section">
-                <h2>🌍 Languages</h2>
-                <p>🇦🇪 Arabic, 🇬🇧 English</p>
-            </div>
-
+            <!-- Employment History comes after skills -->
             <div class="section">
                 <h2>📅 Employment History</h2>
                 <p>📌 <strong>Mathematics Consultant, WEST TANTA EDUCATIONAL ADMINISTRATION</strong>, Tanta, Egypt — August 2022 – Present</p>
+                <ul>
+                    <li>Led teacher training and development workshops to improve teaching strategies.</li>
+                    <li>Evaluated and enhanced mathematics curricula to meet the latest educational standards.</li>
+                    <li>Worked with students and teachers to monitor and enhance performance.</li>
+                </ul>
                 <p>📌 <strong>Manager, GYATH ELDEEN ENGLISH SCHOOL</strong>, Tanta, Egypt — October 2018 – August 2022</p>
+                <ul>
+                    <li>Oversaw implementation of school curricula and ensured alignment with educational goals.</li>
+                    <li>Led teams to improve classroom management and student engagement.</li>
+                    <li>Worked closely with community advisory groups to meet student needs.</li>
+                </ul>
                 <p>📌 <strong>Manager, ELEMAM ELSHAFIE ENGLISH SCHOOL</strong>, Tanta, Egypt — August 2015 – October 2018</p>
+                <ul>
+                    <li>Designed and implemented teacher development programs.</li>
+                    <li>Organized student and parent engagement programs to enhance educational outcomes.</li>
+                </ul>
                 <p>📌 <strong>Maths Teacher, Ali Bin Abitalib Independent School</strong>, Doha — September 2013 – August 2015</p>
                 <p>📌 <strong>Maths Teacher, ELSDEEK Independent</strong>, Doha, Qatar — January 2011 – August 2013</p>
                 <p>📌 <strong>Mathematics Consultant, INTEGRATED LANGUAGE SCHOOL</strong>, Tanta, Egypt — January 2008 – September 2011</p>
             </div>
 
+            <!-- Education at the End -->
             <div class="section">
                 <h2>🎓 Education</h2>
                 <p>🎓 Bachelor of Mathematics, Tanta University, Egypt — September 1992 – May 1996</p>
@@ -119,6 +131,7 @@
                     <li>📘 Effective Learning Strategies from Abubaker</li>
                 </ul>
             </div>
+
         </div>
     </div>
 
