--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
         <!-- Contact Information and Details -->
         <div class="info">
             <div class="section contact-info">
-                <p>📍 <strong>Location:</strong> Mourad Street, Tanta, Egypt</p>
+                <p>📍 <strong>Location:</strong> Zohair Ibn Qise street, Dammam, Saudi Arabia</p>
                 <p>📞 <strong>Phone:</strong> +966570619227</p>
                 <p>📧 <strong>Email:</strong> <a href="mailto:Aly_elshrief@yahoo.com">Aly_elshrief@yahoo.com</a></p>
             </div>
